--- a/.github/workflows/release-mobile.yml
+++ b/.github/workflows/release-mobile.yml
@@ -62,6 +62,6 @@ jobs:
             Published at ${{ steps.date.outputs.date }}
             
             ${{ steps.release_notes.outputs.RELEASE_NOTES }}
-          name: "BuanaVPad Mobile ${{ github.ref_name }}"
+          name: "BuanaVPad ${{ github.ref_name }}"
           token: ${{ secrets.GH_TOKEN }}
           tag: ${{ github.ref_name }}
