--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -35,6 +35,14 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            applicationVariants.all { variant ->
+                variant.outputs.all {
+                    def versionName = defaultConfig.versionName
+                    def buildType = variant.buildType.name
+                    def abi = output.getFilter(com.android.build.OutputFile.ABI)
+                    outputFileName = "BuanaVPad-${versionName}-${buildType}-${abi}.apk"
+                }
+            }
         }
     }
 }
