--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -1,3 +1,10 @@
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
+    id "dev.flutter.flutter-gradle-plugin"
+}
+
 android {
     namespace = "com.example.buana_vpad"
     compileSdk = flutter.compileSdkVersion
@@ -13,25 +20,27 @@ android {
     }
 
     defaultConfig {
+        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.buana_vpad"
+        archivesBaseName "buana-vpad"
+        // You can update the following values to match your application needs.
+        // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
 
-    applicationVariants.all { variant ->
-        variant.outputs.all { output ->
-            def versionName = defaultConfig.versionName
-            def buildType = variant.buildType.name
-            def abi = output.getFilter(com.android.build.OutputFile.ABI)
-            outputFileName = "BuanaVPad-${versionName}-${buildType}-${abi}.apk"
-        }
-    }
-
     buildTypes {
         release {
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            
         }
     }
+}
+
+flutter {
+    source = "../.."
 }
