--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -44,11 +44,13 @@ android {
         }
     }
 
-    buildTypes {
-        release {
-            signingConfig signingConfigs.release
-        }
-    }
+    buildTypes {         
+        release {             
+            if (keystorePropertiesFile.exists()) {
+                signingConfig signingConfigs.release         
+            }
+    }     
+}
 }
 
 flutter {
