--- a/.github/workflows/release-mobile.yml
+++ b/.github/workflows/release-mobile.yml
@@ -1,74 +1,77 @@
 name: Release
-
 on:
-  push:
-    tags:
-      - 'mobile*'
-
+ push:
+   tags:
+     - 'mobile*'
 jobs:
-  releases:
-    name: Build and Release APK
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: mobile
-    
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
+ releases:
+   name: Build and Release APK
+   runs-on: ubuntu-latest
+   defaults:
+     run:
+       working-directory: mobile
+   
+   steps:
+     - name: Checkout the code
+       uses: actions/checkout@v4
 
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          distribution: "zulu"
-          java-version: "17"
+     - name: Setup Java
+       uses: actions/setup-java@v3
+       with:
+         distribution: "zulu"
+         java-version: "17"
 
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
+     - name: Setup Flutter
+       uses: subosito/flutter-action@v2
+       with:
+         channel: "stable"
 
-      - name: Get packages
-        run: flutter pub get
+     - name: Get packages
+       run: flutter pub get
 
-      - name: Generate Java keystore
-        env:
-          KEY_JKS: ${{ secrets.KEY_JKS }}
-        run: echo "$KEY_JKS" | base64 --decode > release-keystore.jks
+     - name: Generate Java keystore
+       env:
+         KEY_JKS: ${{ secrets.KEY_JKS }}
+       run: echo "$KEY_JKS" | base64 --decode > release-keystore.jks
 
-      - name: Build APK
-        env:
-          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-        run: flutter build apk --split-per-abi
+     - name: Create key.properties
+       run: |
+         echo "storePassword=${{ secrets.KEY_PASSWORD }}" >> key.properties
+         echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> key.properties
+         echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> key.properties
+         echo "storeFile=../release-keystore.jks" >> key.properties
 
-      - name: Rename APKs
-        run: |
-          cd build/app/outputs/flutter-apk/
-          mv app-arm64-v8a-release.apk BuanaVPad-arm64-v8a.apk
-          mv app-armeabi-v7a-release.apk BuanaVPad-armeabi-v7a.apk
-          mv app-x86_64-release.apk BuanaVPad-x86_64.apk
+     - name: Build APK
+       run: flutter build apk --split-per-abi
 
-      - name: Get current date
-        id: date
-        run: echo "date=$(TZ='Asia/Jakarta' date +'%A %d-%m-%Y %T WIB')" >> $GITHUB_OUTPUT
-        
-      - name: Get Release Notes
-        id: release_notes
-        run: |
-          RELEASE_NOTES=$(cat RELEASES_NOTES.md)
-          echo "RELEASE_NOTES<<EOF" >> $GITHUB_OUTPUT
-          echo "$RELEASE_NOTES" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+     - name: Rename APKs
+       run: |
+         cd build/app/outputs/flutter-apk/
+         mv app-arm64-v8a-release.apk BuanaVPad-arm64-v8a.apk
+         mv app-armeabi-v7a-release.apk BuanaVPad-armeabi-v7a.apk
+         mv app-x86_64-release.apk BuanaVPad-x86_64.apk
 
-      - name: Release APK
-        uses: ncipollo/release-action@v1
-        with:
-          allowUpdates: true
-          artifacts: "mobile/build/app/outputs/flutter-apk/*.apk"
-          body: |
-            Published at ${{ steps.date.outputs.date }}
-            
-            ${{ steps.release_notes.outputs.RELEASE_NOTES }}
-          name: "BuanaVPad ${{ github.ref_name }}"
-          token: ${{ secrets.GH_TOKEN }}
-          tag: ${{ github.ref_name }}
+     - name: Get current date
+       id: date
+       run: echo "date=$(TZ='Asia/Jakarta' date +'%A %d-%m-%Y %T WIB')" >> $GITHUB_OUTPUT
+       
+     - name: Get Release Notes
+       id: release_notes
+       run: |
+         RELEASE_NOTES=$(cat RELEASES_NOTES.md)
+         echo "RELEASE_NOTES<<EOF" >> $GITHUB_OUTPUT
+         echo "$RELEASE_NOTES" >> $GITHUB_OUTPUT
+         echo "EOF" >> $GITHUB_OUTPUT
+
+     - name: Release APK
+       uses: ncipollo/release-action@v1
+       with:
+         allowUpdates: true
+         artifacts: "mobile/build/app/outputs/flutter-apk/*.apk"
+         body: |
+           Published at ${{ steps.date.outputs.date }}
+           
+           ${{ steps.release_notes.outputs.RELEASE_NOTES }}
+         name: "BuanaVPad ${{ github.ref_name }}"
+         token: ${{ secrets.GH_TOKEN }}
+         tag: ${{ github.ref_name }}
