--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -19,6 +19,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+
 
     defaultConfig {
         applicationId "com.buana_vpad"
